[gd_scene load_steps=3 format=3 uid="uid://bufntssvubj16"]

[ext_resource type="Script" path="res://scripts/game/game_chat_controller.gd" id="1_bvp7h"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5yhoa"]
bg_color = Color(0.211765, 0.211765, 0.211765, 0.603922)

[node name="GameChatController" type="Control"]
layout_mode = 3
anchor_right = 0.989
anchor_bottom = 1.0
offset_right = 10.56
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bvp7h")

[node name="Chat" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -112.0
offset_right = 490.0
offset_bottom = 144.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_5yhoa")

[node name="ChatType" type="Label" parent="Chat"]
layout_mode = 0
offset_left = 7.0
offset_top = 2.0
offset_right = 57.0
offset_bottom = 14.0
mouse_filter = 0
theme_override_colors/font_color = Color(0.643137, 0.643137, 0.643137, 1)
theme_override_font_sizes/font_size = 8
text = "Lobby Type"

[node name="ChatOutput" type="TextEdit" parent="Chat"]
layout_mode = 0
offset_left = 5.0
offset_top = 18.0
offset_right = 484.0
offset_bottom = 214.0
theme_override_colors/font_readonly_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 12
editable = false
context_menu_enabled = false
shortcut_keys_enabled = false
drag_and_drop_selection_enabled = false
virtual_keyboard_enabled = false
middle_mouse_paste_enabled = false
wrap_mode = 1

[node name="Panel" type="Panel" parent="Chat/ChatOutput"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SendMessage" type="Button" parent="Chat"]
layout_mode = 0
offset_left = 370.0
offset_top = 220.0
offset_right = 488.0
offset_bottom = 255.0
theme_override_font_sizes/font_size = 16
text = "Send Message"

[node name="LineEdit" type="LineEdit" parent="Chat/SendMessage"]
layout_mode = 0
offset_left = -370.0
offset_top = 1.0
offset_right = -2.0
offset_bottom = 34.0
placeholder_text = "Your Message Here"

[node name="ChatHideTimer" type="Timer" parent="."]
wait_time = 7.0
one_shot = true

[connection signal="timeout" from="ChatHideTimer" to="." method="_on_chat_hide_timer_timeout"]
